Added Buildup tests

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -206,8 +206,8 @@
      "text": [
       "n = 0.9294\n",
       "c = 0.0241\n",
-      "IPR equation is Qg = 0.0241(Pr^2 - Pwf^2)^0.9294\n",
-      "AOF = 27039.1492\n"
+      "IPR equation is: Qg = 0.0241(Pr^2 - Pwf^2)^0.9294\n",
+      "AOF = 27039.1492Mscf/d\n"
      ]
     }
    ],
@@ -215,10 +215,10 @@
     "# from IsochronalTest import Isochronal\n",
     "\n",
     "iso = Isochronal(df, 1798, 'Qg', 'psq', 6300, 1600)\n",
-    "print(\"n =\", iso.n_factor())\n",
-    "print(\"c =\", iso.c_factor())\n",
-    "print(\"IPR equation is\", iso.IPR())\n",
-    "print(\"AOF =\", iso.AOF())"
+    "print(f\"n = {iso.n_factor()}\")\n",
+    "print(f\"c = {iso.c_factor()}\")\n",
+    "print(f\"IPR equation is: {iso.IPR()}\")\n",
+    "print(f\"AOF = {iso.AOF()}Mscf/d\", )"
    ]
   },
   {
